--- a/summary-app/index.css
+++ b/summary-app/index.css
@@ -1,3 +1,19 @@
 body {
     padding: 1rem;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: .75em;
+}
+
+dl {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 1em;
+    margin-left: 2em;
+    font-size: .9em;
+}
+
+dl > dt {
+    font-style: italic;
+}
